# depth-first-search

./: .gitignore  Depth-First Search Presentation.md  Justfile  README.md  pyproject.toml  requirements.txt
depth_first_search/: __init__.py
