[tool.poetry]
name = "depth-first-search"
version = "0.1.0"
description = ""
authors = ["'Oliver <'oliver.ladores@wvsu.edu.ph'>"]
readme = "README.md"
packages = [{include = "depth_first_search"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
